modifing somethings and completing the work of the last time and making the footer (completed)

--- a/blogPage.html
+++ b/blogPage.html
@@ -119,11 +119,13 @@
                 <div class="author_img"></div>
                 <div class="author_info">
                     <h5 class="author_name">Anass Lamiri</h5>
-                    <div class="author_desc">web designer/Developer</div>
+                    <div class="author_desc">
+                        <p> web designer/Developer </p>
+                    </div>
                 </div>
             </div>
             <div class="tags">
-                <h5>TAGS: <span class="tags_words">&nbsp; DESIGN &nbsp; LIFESTYLE &nbsp; ADOBEXD</span> </h5>
+                <h5>TAGS: <span class="tags_words"><p> &nbsp; DESIGN &nbsp; LIFESTYLE &nbsp; ADOBEXD </p> </span> </h5>
             </div>
         </div>
     </main>
@@ -131,9 +133,10 @@
         <div class="section_title">
             <h2 class="title">Related articles</h2>
             <hr class="hr_line">
-            
         </div>
-
+        <div class="scroll_arrow">
+            <img src="/img/left&right_arrow.svg" alt="">
+        </div>
         <div class="related_post">
             <div class="post_1 post_container">
                 <div class="post_img"></div>
@@ -141,8 +144,11 @@
                     <p class="category">Design</p>
                     <p class="date">OCT 26, 22</p>
                 </div>
-                <div class="post_title"><h2>The title of the article</h2></div>
-                <p class="post_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin.
+                <div class="post_title">
+                    <h2>The title of the article</h2>
+                </div>
+                <p class="post_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
+                    a piece of classical Latin.
                 </p>
                 <a href="#" class="read_post">READ POST</a>
             </div>
@@ -152,8 +158,11 @@
                     <p class="category">Design</p>
                     <p class="date">OCT 26, 22</p>
                 </div>
-                <div class="post_title"><h2>The title of the article</h2></div>
-                <p class="post_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin.
+                <div class="post_title">
+                    <h2>The title of the article</h2>
+                </div>
+                <p class="post_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
+                    a piece of classical Latin.
                 </p>
                 <a href="#" class="read_post">READ POST</a>
             </div>
@@ -163,14 +172,69 @@
                     <p class="category">Design</p>
                     <p class="date">OCT 26, 22</p>
                 </div>
-                <div class="post_title"><h2>The title of the article</h2></div>
-                <p class="post_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin.
+                <div class="post_title">
+                    <h2>The title of the article</h2>
+                </div>
+                <p class="post_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
+                    a piece of classical Latin.
                 </p>
                 <a href="#" class="read_post">READ POST</a>
             </div>
         </div>
     </section>
 
+
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="sec_1">
+                <h3 class="quote">From young to this moment,<br />
+                    I still love Coding the website <br />
+                    that I designed. </h3>
+                <div class="newsletter_footer">
+                    <p class="newsletter_title">NEWSLETTER</p>
+                    <!-- <input type="email" name="email" id="email" placeholder="Enter email address"> -->
+                    <form class="news_form">
+                        <input type="email" name="email" id="email" placeholder="Enter email address">
+                        <!-- <img src="/img/email.svg" class="news_icon" alt="gmail"> -->
+                        <a href="#" class="subs_btn">Subscribe</a>
+                    </form>
+                </div>
+                <div class="copyright">
+                    <h6>Lamiri</h6>
+                    <p>© 2022 Anass Lamiri All Rights Reserved</p>
+                </div>
+            </div>
+
+            <div class="footer_tags">
+                <p class="tags_title">POPULAR TAGS</p>
+                <p class="footer_tags_p">
+                    #html &nbsp; #css &nbsp; #javascript &nbsp; <br /> #design &nbsp; #developer &nbsp; #psd &nbsp;
+                    <br /> #figma
+                </p>
+            </div>
+
+
+            <div class="footer_info">
+                <p class="email_title">GET IN TOUCH</p>
+                <a class="mailto" href="mailto:hello@anassl.com">hello@anassl.com</a>
+                <div class="pages">
+                    <a href="#about">About</a>
+                    <a href="#design">Design</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="social_media">
+                    <a href="#"><img src="/img/facebook.svg" width="12px" height="12px" alt="facebook icon"> </a>
+                    <a href="#"><img src="/img/github.svg" width="12px" height="12px" alt="github icon"> </a>
+                    <a href="#"><img src="/img/instagram.svg" width="12px" height="12px" alt="instagram icon"></a>
+                    <a href="#"><img src="/img/twitter.svg" width="12px" height="12px" alt="twitter icon"></a>
+                    <a href="#"><img src="/img/gmail.svg" width="12px" height="12px" alt="gmail icon"></a>
+                    <a href="#"><img src="/img/linkedin.svg" width="12px" height="12px" alt="linkedin icon"></a>
+
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
